# badger-builder

./: .gitignore  CHANGELOG.md  README.md  badger-builder.py  pyproject.toml  requirements.txt
badger_builder/: __init__.py  __main__.py
badger_builder/commands/: __init__.py  create.py  parse.py
badger_builder/lib/: badgerbuilderai.py  utils.py
badger_builder/lib/configs/listener/: __init__.py  dataformat.py  obfsleep.py  useragent.py
